added chat messages

--- a/client/partials/chat.html
+++ b/client/partials/chat.html
@@ -1,1 +1,12 @@
 <h1>Welcome to the Mean Room</h1>
+
+<form>
+  <input type="text" name="" value="" />
+  <input type="submit" name="" value="Submit" />
+</form>
+<hr />
+<ul>
+  <li ng-repeat="msg in messages">
+    {{msg.author}}: {{msg.content}}
+  </li>
+</ul>
