--- a/client/partials/chat.html
+++ b/client/partials/chat.html
@@ -1,8 +1,9 @@
 <h1>Welcome to the Mean Room</h1>
 
-<form>
-  <input type="text" name="" value="" />
-  <input type="submit" name="" value="Submit" />
+<form ng-submit="sendMessage()">
+  <input type="text" ng-model="author" placeholder="Your name">
+  <input type="text" ng-model="content" placeholder="Be mean here" />
+  <input type="submit" />
 </form>
 <hr />
 <ul>
